# the-song

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  env.example
.github/workflows/: backend-docker-build.yml
backend/: .dockerignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod
backend/src/: dto.rs  main.rs  routes.rs  state.rs  tasks.rs  ws.rs
backend/src/state/: mod.rs
protocol/proto/: the-song.proto
protocol/rust/: Cargo.toml  build.rs
protocol/rust/src/: lib.rs
protocol/typescript/: buf.gen.yaml  package-lock.json  package.json  tsconfig.json
protocol/typescript/src/: index.ts
ui/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
ui/src/: App.tsx  app.tsx  config.ts  index.css
ui/src/assets/: channel.json
ui/src/assets/samplers/: sound-pack.json
ui/src/components/editor/: EditorHeader.tsx  EditorPlaceholder.tsx  bpm-control.tsx  channel-config-dialog.tsx  channel-list.tsx  editor-toolbar.tsx  mouse-overlay.tsx  piano-roll.tsx  time-display.tsx
ui/src/components/home/: CtaSection.tsx  SoundWarningModal.tsx  cta-section.tsx  footer-section.tsx  sound-warning-modal.tsx  terminal-button.tsx  title-section.tsx  why-section.tsx
ui/src/components/layout/: TerminalLayout.tsx  terminal-layout.tsx
ui/src/components/share/: header.tsx  (+1 more)
ui/src/hooks/: useResponsive.ts
ui/src/lib/: crdt.ts  event.ts  utils.ts  websocket.tsx
ui/src/pages/: Editor.tsx  Home.tsx  editor.tsx  home.tsx
ui/src/store/: store.ts
ui/src/types/: data.ts  server.ts
(+25 files in other folders)
